--- a/src/components/Displayer/style.css
+++ b/src/components/Displayer/style.css
@@ -1,14 +1,16 @@
 .displayer {
-    height: 80%;
-    width: 23%;
+    height: 96%;
+    width: 28%;
     border: 2px solid black;
-    border-radius: 8px;
+    border-radius: 8px 0 0 0;
     box-shadow: 4px 4px 2px rgb(128, 125, 125);
 
     background-color: rgb(255, 255, 255);
 
+    padding: 12px;
+
     position: absolute;
-    right: 50px;
-    top: 8%;
+    right: 16px;
+    top: 2%;
     z-index: 1000;
 }
