--- a/src/components/Displayer/style.css
+++ b/src/components/Displayer/style.css
@@ -14,3 +14,11 @@
     top: 2%;
     z-index: 1000;
 }
+
+.displayer_tabs {
+    display: flex;
+}
+
+.displayer_tabs li {
+    margin-left: 8px;
+}
