--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,10 +1,22 @@
 .header-main {
     height: 55px;
     width: 100%;
-    border: 1px solid black
+    border: 1px solid black;
 }
 
 .header-main ul {
+    height: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 24px;
+    font-weight: 700;
+    letter-spacing: 12px;
+}
+
+.header-img {
+    width: 24px;
+    margin: 12px;
+    vertical-align: middle;
 }
