--- a/src/components/HomePage/style.css
+++ b/src/components/HomePage/style.css
@@ -1,18 +1,34 @@
 .home {
     height: 100%;
     position: relative;
+    max-width: 100%;
+
+    overflow-x: hidden;
+}
+
+.clic-img {
+    width: 24px;
+    margin-left: 12px;
+    vertical-align: middle;
 }
 
 .clic {
     position: absolute;
     z-index: 1000;
-    top: 10%;
-    right: 5%;
+    top: 25px;
+    right: -200px;
 
-    padding: 12px;
+    padding: 18px;
 
-    background-color: rgb(255, 255, 255);
-    border: 2px solid #000000;
+    color: #ffffff;
+    background-color: #00daed;
+    border: 2px solid #ffffff;
     box-shadow: 4px 4px 2px rgb(128, 125, 125);
-    border-radius: 5px;
+
+    animation: clic_animation 0.5s forwards ease-out;
+}
+
+@keyframes clic_animation {
+    0% {right: -100px}
+    100% {right: 25px}
 }
