--- a/src/components/Displayer/style.css
+++ b/src/components/Displayer/style.css
@@ -80,9 +80,17 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+
+    position: relative;
 }
 
 .displayer-section-content div {
     margin-left: 24px;
     
+}
+
+.displayer-article-arrow {
+    width: 32px;
+    position: absolute;
+    right: 25%;
 }
