--- a/src/components/Displayer/style.css
+++ b/src/components/Displayer/style.css
@@ -68,28 +68,66 @@
     align-items: center;
 
     height: 25%;
+
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
 }
 
 .displayer-section-title {
     font-size: 24px;
 }
 
-.displayer-section-content {
+.displayer-article-content {
     height: 75%;
 
     display: flex;
+    justify-content: start;
+    position: relative;
+}
+
+.displayer-article-card {
+    width: 25%;
+    margin-left: 6px;
+    
+    display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
 
     position: relative;
 }
 
-.displayer-section-content div {
-    margin-left: 24px;  
+
+.displayer-article-card p:first-child {
+    font-size: 0.8rem;
+    position: absolute;
+    top: 12px;
+    left: 0;
 }
 
+.displayer-article-card p:last-child {
+    text-align: center;
+    font-weight: 600;
+    color: #64bde1;
+}
+
+/*.displayer-section-content div {
+    margin-left: 24px;  
+}*/
+
 .displayer-article-arrow {
-    width: 32px;
-    position: absolute;
-    right: 25%;
+    width: 48px;
+}
+
+.displayer-suggestions {
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #64bde1;
+    text-align: center;
+
+    display: flex;
+    justify-content: center;
+}
+
+.displayer-suggestions div {
+    margin: 0;
 }
