--- a/src/components/HomePage/style.css
+++ b/src/components/HomePage/style.css
@@ -19,6 +19,7 @@
     color: #ffffff;
     background-color: #00daed;
     border: 2px solid #ffffff;
+    box-shadow: 4px 4px 2px rgb(128, 125, 125);
 }
 
 .homePage-search_active {
@@ -31,12 +32,15 @@
     bottom: 24px;
     z-index: 1000;
 
-    background-color: #00daed;
+    background-color: #ffffff;
     color: black;
-    border: 2px solid black;
-    border-radius: 12px;
+    border: 2px solid #00daed;
+    box-shadow: 4px 4px 2px rgb(128, 125, 125);
+    border-radius: 4px;
     height: 64px;
-    padding: 0 18px;
+    padding: 0 16px;
+
+    font-size: 0.8em;
 
     display: flex;
     justify-content: center;
