--- a/src/components/Displayer/style.css
+++ b/src/components/Displayer/style.css
@@ -15,6 +15,32 @@
     z-index: 1000;
 }
 
+.displayer:hover .displayer-close-button {
+    opacity: 100;
+}
+
+.displayer-close-button {
+    opacity: 0;
+
+    position: absolute;
+    top: 6px;
+    right: 6px;
+
+    cursor: pointer;
+
+    background-color: inherit;
+
+    transition: transform .2s ease-in, opacity 0.2s ease-in;
+}
+
+.displayer-close-button:hover {
+    transform: rotate(90deg);
+}
+
+.displayer-close-button img {
+    width: 24px;
+}
+
 .displayer-header {
     height: 10%;
 }
