--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,7 +1,9 @@
+@use 'src/styles/vars' as v;
+
 .footer-main {
     height: 55px;
     width: 100%;
-    border: 1px solid black;
+    border: 1px solid v.$black;
     font-size: 16px;
     font-weight: 600;
 }
