--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -20,3 +20,15 @@
   margin: 12px;
   vertical-align: middle;
 }
+
+@media (max-width: 432px) {
+  .header-main ul {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 360px) {
+  .header-img {
+    display: none;
+  }
+}
