--- a/src/components/HomePage/DataDisplayer/style.scss
+++ b/src/components/HomePage/DataDisplayer/style.scss
@@ -163,10 +163,15 @@
     top: 0;
     left: 0;
     border: none;
+    box-shadow: none;
   }
 
   .displayer-close-button {
     display: none;
+  }
+
+  .displayer-article-suggestions div {
+    width: 50%;
   }
 }
 
