added user signup and signin

--- a/src/components/Signup/style.scss
+++ b/src/components/Signup/style.scss
@@ -19,6 +19,15 @@
     line-height: 3rem;
 }
 
+.signup-registered {
+    color: v.$dark-blue;
+    font-weight: 700;
+}
+
+.signup-registered_hide {
+    display: none;
+}
+
 .signup-form {
     display: flex;
     flex-direction: column;
